Resolve flex wrap desing

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body{
     justify-content: center;
     margin-top: 2em;
     min-width: 360px;
-    min-height: 700px;
     width: 100%;
     height: 50vh;
 }
@@ -24,17 +23,24 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 2rem;
     margin: 50% 0;
 }
 
 .app__icon-aside{
+    position: fixed;
+    left: 0;
+    right: 0;
     display: flex;
     margin: 0 auto;
-    min-width: 360px;
-    max-width: 360px;
+    width: 100vw;
+    max-width: 1200px;
     gap: 1rem;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(5px);
+    box-shadow: 1px 1px 15px lightgreen;
+    border-radius: 5px;
 }
 
 .size__center{
