--- a/src/components/styles/formUser.css
+++ b/src/components/styles/formUser.css
@@ -13,6 +13,7 @@
     align-items: center;
     background-color: rgba(0, 10, 14, 0.364);
     backdrop-filter: blur(5px);
+    z-index: 1000;
 }
 
 .form__container{
