--- a/src/components/styles/userCard.css
+++ b/src/components/styles/userCard.css
@@ -10,25 +10,26 @@
 .user_card-container{
     flex-wrap: wrap;
     justify-content: center;
-    margin: 2rem;
+    /* margin: 2rem; */
+    margin-top: 4rem;
     gap: 1em;
-    overflow-y: scroll;
-    height: 80vh; 
+    /* overflow-y: scroll; */
+    /* height: 80vh;  */
     max-width: 1200px;
     font-size: 1.5rem;
     padding-top: 0.6em;
+    padding-bottom: 1rem;
 }
 
-.user_card-container::-webkit-scrollbar{
+::-webkit-scrollbar{
     background-color: rgb(28, 28, 28);
     border: 2px solid purple;
     border-radius: 8px;
 }
 
-.user_card-container::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb{
     border-radius: 8px;
     background-color: rgba(0, 255, 221, 0.734);
-    width: 0.5rem;
 }
 
 .user__card{
@@ -51,7 +52,6 @@
 
 .user_card-item{
     gap: 0.5rem;
-    font-weight: bolder;
     max-width: 338px;
     flex-wrap: wrap;
     overflow-x: hidden;
